apps/patchmon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: patchmon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/patchmon/patchmon-backend:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: patchmon-files
              mountPath: /app/agents
              subPath: /data/agents
            - name: patchmon-files
              mountPath: /app/assets
              subPath: /data/assets

      volumes:
        - name: patchmon-files
          persistentVolumeClaim:
            claimName: patchmon-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: patchmon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/patchmon/patchmon-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: patchmon-files
              mountPath: /usr/share/nginx/html/assets

      volumes:
        - name: patchmon-files
          persistentVolumeClaim:
            claimName: patchmon-frontend
---
